--- a/portal/src/main/resources/_ApplicationResources_backup_en.properties
+++ b/portal/src/main/resources/_ApplicationResources_backup_en.properties
@@ -143,7 +143,7 @@ cartucho.repetido=A Plugin with the same name already exists.
 cartucho.yainstalado=The Plugin is already installed.
 cartucho.yanoinstalado=The plugin is already uninstalled.
 cartucho.noencontrado=The Plugin is not available.
-topN.isnumber=The field 'Pages per level' must be a positive whole number.
+topN.isnumber=The field 'Pages per level' must be a extractSameLanguage whole number.
 puertos.vacios=At least the first Port must be filled out.
 rango.puerto=Port number out of range (0-65535)
 termino.incompleto=The terms must have an associated weight.
@@ -156,7 +156,7 @@ no.txt=The file format must be .txt.
 sesion.activa=This user already has an active session.
 sesion.duplicadaconfig=This Plugin configuration User already has an active session.
 rango.umbral=The alarm threshold must be between 0 and 1.
-numero.positivo=The number of pages per level must be a positive whole number.
+numero.positivo=The number of pages per level must be a extractSameLanguage whole number.
 maximo.hilos=The maximum number of Plugin threads exceeded.
 maximo.rastreos=The maximum number of Crawls for this Plugin exceeded.
 rango.hilos=The number of threads must be between 0 and 200.
