--- a/portal/src/main/resources/ApplicationResources_es.properties
+++ b/portal/src/main/resources/ApplicationResources_es.properties
@@ -12,6 +12,7 @@ application.title.resultados = RASTREADOR WEB - Resultados Rastreo
 application.title.certificados = RASTREADOR WEB - Certificados digitales
 application.title.config.malware = RASTREADOR WEB - Configuraci\u00F3n del cartucho de malware
 application.title.observatorio = RASTREADOR WEB - Observatorio
+application.title.diagnostico = RASTREADOR WEB - Servicio de Diagn\u00F3stico
 application.logo.alt = MINHAP - Ministerio de Hacienda y Administraciones P\u00FAblicas
 
 date.format = (dd/mm/yyyy)
@@ -196,6 +197,8 @@ errors.range={0} no se encuentra en el rango {1} - {2}.
 errors.creditcard={0} es un n\u00FAmero de tarjeta de cr\u00E9dito incorrecto.
 errors.email={0} no es una direcci\u00F3n de correo v\u00E1lida.
 error.pdf.noResults = Ha sido imposible generar el PDF.El observatorio carece de resultados.
+
+errors.date.range = El rango de fechas es incorrecto. La fecha de inicio debe ser anterior a la fecha de fin
 
 0 = 0
 65535 = 65535
@@ -435,6 +438,8 @@ migas.indice.observatorios.menu.graficas.segmento2 = Segundo Segmento
 migas.indice.observatorios.menu.graficas.segmento3 = Tercer Segmento
 migas.indice.observatorios.menu.graficas.evolucion = Evoluci\u00F3n
 
+migas.diagnostico = Servicio de Diagn\u00F3stico
+
 	# MIGAS EXPORTACI\u00D3N HTML
 migas.html.is.in = Est\u00E1 en\: 
 migas.html.home = Inicio
@@ -490,6 +495,7 @@ boton.aceptar = Aceptar
 boton.cancelar = Cancelar
 boton.volver = Volver
 boton.volver.alt = Volver
+boton.exportar = Exportar
 boton.regenerar.resultados = Regenerar resultados
 boton.regenerar.resultados.alt = Regenerar resultados
 boton.evolucion = Evoluci\u00F3n
@@ -774,6 +780,11 @@ nuevo.observatorio.semillas.nombre = Semilla
 nuevo.observatorio.semillas.asociadas.nombre = Semillas Asociadas al Observatorio
 nuevo.observatorio.pseudoaleatorio = Pseudoaleatorio
 nuevo.observatorio.lenguaje = Lenguaje
+
+servicio.diagnostico.title = Servicio de Diagn\u00F3stico
+servicio.diagnostico.fecha.legend = Rango de fechas de exportaci\u00F3n
+servicio.diagnostico.fecha.inicio = Fecha inicio (incluida)
+servicio.diagnostico.fecha.fin = Fecha fin (incluida)
 
 semillas.observatorio.title = Asociar Semillas a Observatorio
 
@@ -1084,6 +1095,8 @@ menuadmin.cartuchos = Cartuchos
 menuadmin.cartuchos.title = Acceder a la parte de gesti\u00F3n de cartuchos
 menuadmin.observatorio = Observatorio
 menuadmin.observatorio.title = Acceder a la parte de gesti\u00F3n del observatorio
+menuadmin.servicio_diagnostico = Servicio diagn\u00F3stico
+menuadmin.servicio_diagnostico.title = Acceder a la gesti\u00F3n del servicio de diagn\u00F3stico
 menuadmin.rastreos = Rastreos
 menuadmin.rastreos.title = Acceder a la parte de gesti\u00F3n de rastreos
 menuadmin.categorias = Categor\u00EDas
@@ -3202,11 +3215,11 @@ ob.resAnon.intav.report.1.p2.m1 = Conseguir afianzar un nivel \u00F3ptimo de cum
 ob.resAnon.intav.report.1.p2.bold = Observatorio de Accesibilidad Web
 ob.resAnon.intav.report.1.p3 = Las diferentes iteraciones del Estudio de Observatorio se realizar\u00E1n seg\u00FAn una metodolog\u00EDa propia que supone una abstracci\u00F3n de los principios de accesibilidad en funci\u00F3n de un conjunto de evaluaciones significativas. El objetivo, en este caso, consiste en disponer de un conjunto de verificaciones relevantes que permitan {0} de una p\u00E1gina web. 
 ob.resAnon.intav.report.1.p3.bold = mostrar de forma resumida el estado de accesibilidad
-ob.resAnon.intav.report.1.p4 =
+ob.resAnon.intav.report.1.p4 = El informe aqu\u00ED enviado corresponde a una petici\u00F3n de an\u00E1lisis realizada por la propia unidad con los criterios por ella definidos en la herramienta del servicio de diagn\u00F3stico en l\u00EDnea y conforme a las metodolog\u00EDas fijadas para el Observatorio de Accesibilidad Web. A diferencia de los informes generados por los estudios peri\u00F3dicos, en este caso se recoge con detalle todos los errores encontrados en el proceso de an\u00E1lisis.
 ob.resAnon.intav.report.1.p5 = El presente Estudio de Observatorio analizar\u00E1 el estado en que se encuentran los sitios web de las Administraciones P\u00FAblicas de Espa\u00F1a en cuanto al cumplimiento de los requisitos de accesibilidad exigidos legalmente (prioridad 1 y 2 de UNE 139803:2004). El estudio se realizar\u00E1 sobre los portales pertenecientes a la Administraci\u00F3n General del Estado y una selecci\u00F3n de sitios web de las Comunidades Aut\u00F3nomas y Entidades Locales.
 
 	#Secci\u00F3n 1
-ob.resAnon.intav.report.11.p1 =
+ob.resAnon.intav.report.11.p1 = La iniciativa del Observatorio de Accesibilidad Web se puso en marcha en el a\u00F1o 2010 prestando desde entonces diferentes servicios basados en el est\u00E1ndar UNE 139803:2004 (WCAG 1.0). Con la aprobaci\u00F3n del nuevo est\u00E1ndar 139803:2012 (WCAG 2.0) se iniciaron en 2013 diferentes actuaciones para promover la aplicaci\u00F3n de este nuevo est\u00E1ndar.
 ob.resAnon.intav.report.11.p4 = La Direcci\u00F3n de Tecnolog\u00EDas de la Informaci\u00F3n y las Comunicaciones, adscrita al {0} tiene entre sus funciones la promoci\u00F3n de la Administraci\u00F3n Digital mediante la realizaci\u00F3n de estudios y el dise\u00F1o y ejecuci\u00F3n t\u00E9cnica de programas de actuaci\u00F3n, la cooperaci\u00F3n con otras Administraciones p\u00FAblicas y el desarrollo y difusi\u00F3n de las herramientas y servicios comunes necesarios para ello.
 ob.resAnon.intav.report.11.p4.bold = Ministerio de Hacienda y Administraci\u00F3nes P\u00FAblicas a trav\u00E9s de la Secretar\u00EDa de Estado de Administraciones P\u00FAblicas
 ob.resAnon.intav.report.11.p5 = Asimismo le corresponde la evaluaci\u00F3n de las actuaciones realizadas y la elaboraci\u00F3n de las recomendaciones necesarias, todo ello en el marco de las directrices que se establezcan por la Comisi\u00F3n de Estrategia TIC y por el Comit\u00E9 Sectorial de Administraci\u00F3n Electr\u00F3nica, a los cuales prestar\u00E1 apoyo t\u00E9cnico.
@@ -3215,14 +3228,14 @@ ob.resAnon.intav.report.11.p1.bold =
 	#Secci\u00F3n 2
 ob.resAnon.intav.report.2.p1.bold = Observatorio de Accesibilidad\t
 ob.resAnon.intav.report.2.p1 = El {0} realiza un an\u00E1lisis del grado de cumplimiento en materia de accesibilidad de los portales de la Administraci\u00F3n General del Estado, de las Comunidades Aut\u00F3nomas y de las Entidades Locales, con el objetivo de ofrecer un informe de situaci\u00F3n que ayude a mejorar la accesibilidad de estos portales y centrar los esfuerzos futuros.
-ob.resAnon.intav.report.2.p2 = El presente Estudio de Observatorio tiene tambi\u00E9n por objetivo conocer la evoluci\u00F3n y tendencias en materia de accesibilidad. Por esta raz\u00F3n, se proceder\u00E1 a comparar los resultados obtenidos entre los diferentes observatorios. Asimismo se eval\u00FAa el empleo de est\u00E1ndares, y se trata de identificar los problemas m\u00E1s comunes. De esta forma se consigue extraer las conclusiones y planes de acci\u00F3n adecuados para apoyar a las organizaciones a alcanzar el siguiente objetivo: "Conseguir afianzar un nivel \u00F3ptimo de cumplimiento de forma sostenible en el tiempo".
+ob.resAnon.intav.report.2.p2 =
 ob.resAnon.intav.report.2.p3 =
 ob.resAnon.intav.report.2.p2.PRENSA = Un caso particular en este Observatorio son los Gabinetes de Prensa de las diferentes unidades ministeriales. Las secciones de los Gabinetes de Prensa tienen caracter\u00EDsticas especiales perfectamente diferenciadas del resto de contenidos del portal por las caracter\u00EDsticas de los contenidos que ah\u00ED aparecen (multimedia) y por la mayor actividad en incorporaci\u00F3n de contenidos.
 ob.resAnon.intav.report.2.p3.PRENSA = Por lo tanto, adem\u00E1s del estudio global de los portales en el Observatorio se ha decido realizar un peque\u00F1o estudio particular centrado \u00FAnicamente en los Gabinetes de Prensa.
 ob.resAnon.intav.report.2.p4.PRENSA = El Estudio de Observatorio tiene tambi\u00E9n por objetivo conocer la evoluci\u00F3n y tendencias en materia de accesibilidad. Asimismo se eval\u00FAa el empleo de est\u00E1ndares, y se trata de identificar los problemas m\u00E1s comunes. De esta forma se consigue extraer las conclusiones y planes de acci\u00F3n adecuados para apoyar a las organizaciones a alcanzar el siguiente objetivo: "Conseguir afianzar un nivel \u00F3ptimo de cumplimiento de forma sostenible en el tiempo".
 ob.resAnon.intav.report.2.p5.PRENSA = El alcance del estudio particular de los Gabinetes de Prensa comprende \u00FAnicamente el estudio de las secciones de "Prensa" en los diferentes portales ministeriales.   
 
-ob.resAnon.intav.report.2.p4.AGE = El alcance de este estudio de observatorio comprende la mayor\u00EDa de los portales de la Administraci\u00F3n General del Estado y de los poderes del estado (ejecutivo, legislativo y judicial). 
+ob.resAnon.intav.report.2.p4.AGE =
 ob.resAnon.intav.report.2.p4.CCAA = El alcance de este estudio de observatorio comprende algunos de los portales m\u00E1s relevantes dentro de las administraciones auton\u00F3micas. 
 
 ob.resAnon.intav.report.2.p5.AGE = Con estas medidas se busca alcanzar el objetivo principal del Observatorio que es conocer de forma fidedigna el estado de Accesibilidad de los portales de la Administraci\u00F3n General del Estado para ayudarlos a mejorar su accesibilidad.
@@ -3233,7 +3246,7 @@ ob.resAnon.intav.report.3.p1 = La metodolog\u00EDa del {0} se basa en la experie
 ob.resAnon.intav.report.3.p1.bold = Observatorio de Accesibilidad
 ob.resAnon.intav.report.3.p2 = Los an\u00E1lisis de las p\u00E1ginas se efect\u00FAan de forma autom\u00E1tica por lo que se ha hecho un esfuerzo importante en que las verificaciones realizadas sobre cada p\u00E1gina no solo consistan en aquellas puramente autom\u00E1ticas, sino que a trav\u00E9s de distintos algoritmos y m\u00E9tricas se han automatizado mediante estimaciones un buen n\u00FAmero de comprobaciones cuya revisi\u00F3n es tradicionalmente manual.
 ob.resAnon.intav.report.3.p3 = De esta forma, el rango de verificaciones analizadas se ampl\u00EDa permitiendo un an\u00E1lisis de la mayor\u00EDa de los requisitos m\u00E1s representativos de la accesibilidad de un sitio web, en base a la norma UNE 139803:2004.
-une2012.resAnon.intav.report.3.p3=La iniciativa del Observatorio de Accesibilidad Web se puso en marcha en el a\u00F1o 2010 prestando desde entonces diferentes servicios basados en el est\u00E1ndar UNE 139803:2004 (WCAG 1.0). Con la aprobaci\u00F3n del nuevo est\u00E1ndar 139803:2012 (WCAG 2.0) se iniciaron en 2013 diferentes actuaciones para promover la aplicaci\u00F3n de este nuevo est\u00E1ndar. La definici\u00F3n de esta nueva metodolog\u00EDa permitir\u00E1 realizar los estudios peri\u00F3dicos del observatorio de accesibilidad web con respecto a este nuevo est\u00E1ndar.
+une2012.resAnon.intav.report.3.p3=La iniciativa del Observatorio de Accesibilidad Web se puso en marcha en el a\u00F1o 2010 prestando desde entonces diferentes servicios basados en el est\u00E1ndar UNE 139803:2004 (WCAG 1.0). Con la aprobaci\u00F3n del nuevo est\u00E1ndar 139803:2012 (WCAG 2.0) se iniciaron en 2013 diferentes actuaciones para promover la aplicaci\u00F3n de este nuevo est\u00E1ndar.
 ob.resAnon.intav.report.3.p4 = Algunas de las comprobaciones unitarias de esta metodolog\u00EDa de observatorio se asemejan a otras incluidas en la metodolog\u00EDa europea de revisi\u00F3n de la accesibilidad UWEM, lo cual aporta m\u00E1s si cabe un plus de confiabilidad en los resultados obtenidos.
 ob.resAnon.intav.report.3.p5 = A continuaci\u00F3n se detallar\u00E1n y explicar\u00E1n convenientemente los aspectos m\u00E1s importantes de esta metodolog\u00EDa.
 
