--- a/portal/src/main/resources/ApplicationResources_es.properties
+++ b/portal/src/main/resources/ApplicationResources_es.properties
@@ -2499,8 +2499,8 @@ check.95.error = Elemento <code>textarea</code> no tiene una etiqueta asociada e
 check.95.rationale = <p>La asociaci\u00F3n expl\u00EDcita elimina la dependencia en la colocaci\u00F3n de la etiqueta y su control, ya que los agentes de usuario los asociar\u00E1n autom\u00E1ticamente.</p><p>Para realizar dicha asociaci\u00F3n se debe utilizar el elemento <code>LABEL</code> con el atributo <code>for</code>, de forma que el valor del atributo <code>id</code> de cada control coincida con el valor del atributo <code>for</code> de su respectiva etiqueta. Pudiendo emplearse una \u00FAnica vez el mismo valor del atributo <code>id</code>.</p><p>Los elementos <code>textarea</code> listados a continuaci\u00F3n no poseen etiqueta asociada expl\u00EDcitamente.</p>
 check.97.error = Podr\u00EDa perderse informaci\u00F3n en el documento cuando se desactivan las hojas de estilo.
 check.97.rationale = <p>Los documentos deben organizarse de forma que transmitan la misma informaci\u00F3n y proporcionen la misma funcionalidad, independientemente de la disponibilidad o soporte para hojas de estilo.</p><p>De esta forma no se debe incluir contenido por medio de las hojas de estilo, ya que \u00E9ste se perder\u00E1 en los navegadores que no soporten el uso de hojas de estilo</p><p>Se debe comprobar que al desactivar el soporte para hojas de estilo se muestre la misma informaci\u00F3n en la p\u00E1gina.</p>
-check.100.error = <code>blockquote</code> se puede usar para identacion.
-check.100.rationale = <p>Solamente usa <code>blockquote</code> para indicar comillas. Marcar todos los Siglas con un elemento v\u00E1lido. <code>blockquote</code> Es un elemento sem\u00E1ntico y su uso inapropiado puede confundir al usuario.</p>
+check.100.error = Existen im\u00E1genes cuyo atributo <code>alt</code> contiene un texto de relleno.
+check.100.rationale = <p>Proporcione alternativas adecuadas a las im\u00E1genes dependiendo de su funcionalidad. Si son decorativas utilice un atributo <code>alt</code> vac\u00EDo o con un espacio en blanco y si son im\u00E1genes que transmiten informaci\u00F3n describa esa misma informaci\u00F3n textualmente en el atributo <code>alt</code>.</p>
 check.102.error = Puede que se necesite replicar el evento <code>ONBLUR</code>.
 check.102.rationale = <p>Se deben utilizar eventos l\u00F3gicos (a nivel de aplicaci\u00F3n), en lugar de eventos dependientes de dispositivo. Si se tienen que emplear atributos espec\u00EDficos de un dispositivo, se debe proporcionar mecanismos redundantes de interacci\u00F3n, es decir, especificar manejadores complementarios para un mismo evento.</p><p>El evento <code>ONBLUR</code> no es dependiente de dispositivo pero puede que no se ejecute siempre que el programador desee. Por esto, se debe comprobar si se quiere replicar con el evento <code>onmouseout</code>, para que se ejecute en todas las ocasiones que el programador crea oportunas.</p>
 check.103.error = El <code>SCRIPT</code> puede no ser accesible desde teclado, <code>ONDBLCLICK</code> requiere funciones espec\u00EDficas de teclado.
@@ -2889,7 +2889,8 @@ check.131.rationale = <p>Es necesario que el c\u00F3digo de las hojas de estilo 
 check.135.error = No se ha encontrado un enlace a la secci\u00F3n del Mapa Web en la p\u00E1gina (enlaces con texto "Mapa Web", "Site map", etc.).
 check.135.rationale = <p>Cuando el contenido completo de un sitio Web no se puede incluir en los men\u00FAs de navegaci\u00F3n, se debe proporcionar una p\u00E1gina, generalmente conocida como Mapa Web, que re\u00FAna enlaces a todas las secciones y p\u00E1ginas importantes y que presente una organizaci\u00F3n similar a la estructura del portal. Adem\u00E1s se debe poder acceder al Mapa Web desde todas las p\u00E1ginas del portal.</p>
 check.141.error = Hay dos o m\u00E1s encabezados seguidos del mismo nivel con el mismo texto.
-check.142.error = Se ha encontrado un enlace sin texto.
+check.142.error = Se han encontrado enlaces sin texto.
+check.142.rationale = Existen enlaces que no contienen un texto o bien contienen una imagen sin alternativa textual.
 check.148.error = La Declaraci\u00F3n de Accesibilidad del portal carece de forma de contacto con los administradores del sitio.
 check.148.rationale = <p>Seg\u00FAn el Real Decreto 1494/2007, los sitios Web de la Administraci\u00F3n deben disponer de una p\u00E1gina que indique las medidas de Accesibilidad adoptadas para asegurar el acceso a su informaci\u00F3n para todos los usuarios, la fecha de la \u00FAltima revisi\u00F3n de Accesibilidad, y un mecanismo de contacto.</p>
 check.149.error = La Declaraci\u00F3n de Accesibilidad del portal no especifica la fecha de la \u00FAltima revisi\u00F3n de la accesibilidad del sitio.
@@ -2970,6 +2971,8 @@ check.417.error = Simulaci\u00F3n de grupos de opciones en elementos <code>SELEC
 check.417.rationale = <p>Los grupos de opciones <code>OPTION</code> en los <code>SELECT</code> se deben marcar con el elemento <code>OPTGROUP</code> y etiquetarse con el atributo <code>LABEL</code> en lugar de emplear elementos <code>OPTION</code> falsos para simular estas divisiones.</p>
 check.418.error = Ausencia de informaci\u00F3n de resumen (atributo <code>summary</code>) en tablas de datos complejas.
 check.418.rationale = <p>Las tablas complejas que tienen encabezados tanto de fila como de columna y adem\u00E1s tienen dos o m\u00E1s filas o columnas de encabezado deben proporcionar una informaci\u00F3n de resumen que explique la estructura general de la tabla en el atributo <code>summary</code>.</p>
+check.419.error = No se ha encontrado un enlace al mapa web ni opci\u00F3n de buscador.
+check.419.rationale = <p>Deben proporcionarse m\u00E9todos complementarios de navegaci\u00F3n como un mapa web o la inclusi\u00F3n de un buscador que permitan localizar una p\u00E1gina web.</p>
 check.420.error = Empleo excesivo de elementos de presentaci\u00F3n inadecuados.
 check.420.rationale = <p>No deben emplearse elementos de presentaci\u00F3n que est\u00E9n desaconsejados, debiendo emplear en su lugar otros elementos estructurales y sem\u00E1nticos adecuados as\u00ED como separar el contenido de la presentaci\u00F3n mediante el uso de hojas de estilo.</p>
 check.421.error = Inexistencia de encabezado <code>H1</code>.
@@ -3015,7 +3018,7 @@ check.440.rationale = <p>El marcado debe ser correcto para evitar que se produzc
 check.441.error = Atributos duplicados en la misma etiqueta.
 check.441.rationale = <p>El marcado debe ser correcto para evitar que se produzcan errores en el c\u00F3digo que puedan dificultar la interpretaci\u00F3n del mismo por parte de las aplicaciones de usuarios. Para ello, no debe haber atributos repetidos para un mismo elemento ya que se crea un conflicto en la elecci\u00F3n del valor adecuado pudiendo dar lugar a inconsistencias de interpretaci\u00F3n entre diferentes navegadores.</p>
 check.442.error = El idioma de la p\u00E1gina no coincide con el especificado.
-check.442.rationale = <p>Se debe identificar el idioma principal de una p\u00E1gina a trav\u00E9s del atributo <code>lang</code> del elemento <code>HTML</code> empleando un c\u00F3digo de idioma v\u00E1lido seg\u00FAn la lista de lenguajes que proporciona la Agencia de Asignaci\u00F3n de N\u00FAmeros de Internet (IANA). Los lectores de pantalla usar\u00E1n esta informaci\u00F3n para utilizar la pronunciaci\u00F3n y entonaci\u00F3n adecuada al leer el contenido. Por supuesto, el c\u00F3digo de idioma usado para identificar el idioma principal debe corresponderse con el idioma empleado en el contenido de la p\u00E1gina.</p>
+check.442.rationale = <p>El idioma de la p\u00E1gina no corresponde con el idioma definido. Aseg\u00FArese que si usa t\u00E9rminos en otros idiomas estos est\u00E1n correctamente identificados con su idioma correspondiente.</p>
 check.443.error = Grupos de botones de radio o casillas de verificaci\u00F3n sin agrupar mediante <code>FIELDSET</code>.
 check.443.rationale = <p>Cuando en un formulario existen diferentes grupos de campos de formulario relacionados entre s\u00ED se deben marcar dichos grupos con el elemento <code>FIELDSET</code> y se debe identificar cada grupo con una etiqueta proporcionada en el elemento <code>LEGEND</code> correspondiente. Esto es especialmente importante en los grupos de botones de radio y casillas de verificaci\u00F3n. Si hay grupos de tres o m\u00E1s botones de radio o casillas de verificaci\u00F3n (con el mismo <code>name</code>) entonces cada grupo se debe identificar con el elemento <code>FIELDSET</code>.</p>
 check.444.error = Elementos <code>FIELDSET</code> que carecen de etiqueta para identificar su contenido.
@@ -3054,11 +3057,10 @@ check.460.error = Cambios de idioma sin especificar.
 check.460.rationale = <p>Cuando en el contenido de la p\u00E1gina se produzca alg\u00FAn cambio de idioma se debe identificar dicho cambio de idioma con el atributo <code>lang</code> empleando un c\u00F3digo de idioma v\u00E1lido seg\u00FAn la lista de lenguajes que proporciona la Agencia de Asignaci\u00F3n de N\u00FAmeros de Internet (IANA). Los lectores de pantalla usar\u00E1n esta informaci\u00F3n para utilizar la pronunciaci\u00F3n y entonaci\u00F3n adecuada al leer el contenido.</p>
 check.461.error = Etiquetas de formulario ocultas visualmente.
 check.461.rationale = <p>Las etiquetas <code>LABEL</code> de los campos de formulario no pueden estar ocultas visualmente si no existe otro mecanismo para indicar la funci\u00F3n del campo como, por ejemplo, el t\u00EDtulo del mismo (<code>title</code>). Todos los usuarios deben poder acceder a esta informaci\u00F3n, incluyendo los los usuarios de navegadores gr\u00E1ficos.</p>
-check.462.error = T\u00EDtulos repetidos en la muestra.
+check.462.error = Las p\u00E1ginas analizadas en el muestreo presentan todas el mismo t\u00EDtulo.
 check.462.rationale = <p>Deben proporcionarse t\u00EDtulos (etiquetas <code>TITLE</code>) adecuados a las p\u00E1ginas web para que sirvan de orientaci\u00F3n dentro de la navegaci\u00F3n del portal.</p>
 check.463.error = La Declaraci\u00F3n de Accesibilidad del portal carece del nivel de accesibilidad alcanzado.
 check.463.rationale = <p>La Declaraci\u00F3n de Accesibilidad del portal debe indicar el nivel de accesibilidad alcanzado as\u00ED como cualquier caracter\u00EDstica particular del portal que afecte a su accesibilidad</p>
-
 
 multilanguage.detail.title = Resultados del an\u00E1lisis de Multilig\u00FCismo
 multilanguage.detail.caption = Lista de lenguajes encontrados
@@ -3251,7 +3253,7 @@ ob.resAnon.intav.report.3.p1 = La metodolog\u00EDa del {0} se basa en la experie
 ob.resAnon.intav.report.3.p1.bold = Observatorio de Accesibilidad
 ob.resAnon.intav.report.3.p2 = Los an\u00E1lisis de las p\u00E1ginas se efect\u00FAan de forma autom\u00E1tica por lo que se ha hecho un esfuerzo importante en que las verificaciones realizadas sobre cada p\u00E1gina no solo consistan en aquellas puramente autom\u00E1ticas, sino que a trav\u00E9s de distintos algoritmos y m\u00E9tricas se han automatizado mediante estimaciones un buen n\u00FAmero de comprobaciones cuya revisi\u00F3n es tradicionalmente manual.
 ob.resAnon.intav.report.3.p3 = De esta forma, el rango de verificaciones analizadas se ampl\u00EDa permitiendo un an\u00E1lisis de la mayor\u00EDa de los requisitos m\u00E1s representativos de la accesibilidad de un sitio web, en base a la norma UNE 139803:2004.
-une2012.resAnon.intav.report.3.p3=La iniciativa del Observatorio de Accesibilidad Web se puso en marcha en el a\u00F1o 2010 prestando desde entonces diferentes servicios basados en el est\u00E1ndar UNE 139803:2004 (WCAG 1.0). Con la aprobaci\u00F3n del nuevo est\u00E1ndar 139803:2012 (WCAG 2.0) se iniciaron en 2013 diferentes actuaciones para promover la aplicaci\u00F3n de este nuevo est\u00E1ndar.
+une2012.resAnon.intav.report.3.p3=
 ob.resAnon.intav.report.3.p4 = Algunas de las comprobaciones unitarias de esta metodolog\u00EDa de observatorio se asemejan a otras incluidas en la metodolog\u00EDa europea de revisi\u00F3n de la accesibilidad UWEM, lo cual aporta m\u00E1s si cabe un plus de confiabilidad en los resultados obtenidos.
 ob.resAnon.intav.report.3.p5 = A continuaci\u00F3n se detallar\u00E1n y explicar\u00E1n convenientemente los aspectos m\u00E1s importantes de esta metodolog\u00EDa.
 
@@ -3342,8 +3344,10 @@ ob.resAnon.intav.report.33.p8 = Nivel de adecuaci\u00F3n\:
 ob.resAnon.intav.report.33.p9 = {0} se definen dos niveles de adecuaci\u00F3n en funci\u00F3n de la prioridad de las caracter\u00EDsticas analizadas.
 ob.resAnon.intav.report.33.p10 = Prioridad 1\: 
 ob.resAnon.intav.report.33.p11 = {0} se encarga de caracter\u00EDsticas b\u00E1sicas que una p\u00E1gina Web tiene que cumplir para ser accesible. Las verificaciones de este nivel est\u00E1n enmarcadas en los requisitos de Prioridad 1 de la norma UNE 139803:2004.
+une2012.resAnon.intav.report.33.p11 = {0} se encarga de caracter\u00EDsticas b\u00E1sicas que una p\u00E1gina Web tiene que cumplir para ser accesible. Las verificaciones de este nivel est\u00E1n enmarcadas en los requisitos de Prioridad 1 de la norma UNE 139803:2012.
 ob.resAnon.intav.report.33.p12 = Prioridad 2:
 ob.resAnon.intav.report.33.p13 = {0} se encarga de caracter\u00EDsticas m\u00E1s complejas que una p\u00E1gina Web debe cumplir para ser accesible. Las verificaciones de este nivel est\u00E1n enmarcadas en los requisitos de Prioridad 2 de la norma UNE 139803:2004.
+une2012.resAnon.intav.report.33.p13 = {0} se encarga de caracter\u00EDsticas m\u00E1s complejas que una p\u00E1gina Web debe cumplir para ser accesible. Las verificaciones de este nivel est\u00E1n enmarcadas en los requisitos de Prioridad 2 de la norma UNE 139803:2012.
 ob.resAnon.intav.report.33.p14 = Cada verificaci\u00F3n viene definida por una serie de elementos:
 ob.resAnon.intav.report.33.p15 = Identificador de la verificaci\u00F3n\: 
 ob.resAnon.intav.report.33.p16 = {0} Se trata del identificador \u00FAnico de cada verificaci\u00F3n. Est\u00E1 formado por tres d\u00EDgitos separados por puntos que indican el nivel de an\u00E1lisis, el nivel de adecuaci\u00F3n y el n\u00FAmero de secuencia de la verificaci\u00F3n. Se utiliza para hacer referencia a una verificaci\u00F3n de forma un\u00EDvoca.
