--- a/portal/src/main/resources/ApplicationResources_es.properties
+++ b/portal/src/main/resources/ApplicationResources_es.properties
@@ -4538,3 +4538,5 @@ ob.resAnon.multilanguage.report.333.p10 = Gallego: 60% (el 60% de las palabras d
 ob.resAnon.multilanguage.report.333.p11 = Ingl\u00E9s: 20% (el 20% de las palabras de la p\u00E1gina aparecen en el diccionario ingl\u00E9s).
 ob.resAnon.multilanguage.report.333.p12 = Franc\u00E9s: 15% (el 15% de las palabras de la p\u00E1gina aparecen en el diccionario franc\u00E9s).
 ob.resAnon.multilanguage.report.333.p13 =se considerar\u00EDa que el texto de la p\u00E1gina est\u00E1 en espa\u00F1ol, es decir, "la mayor\u00EDa de la p\u00E1gina est\u00E1 en espa\u00F1ol".
+check.464.error=Se han encontrado encabezados que se usan para indicar el título de tablas
+check.464.rationale=<p>Use el elemento <code>CAPTION</code> para indicar el título de tablas de datos en vez de encabezados adyacentes</p>
