Informes individuales finales

--- a/portal/src/main/resources/ApplicationResources_es.properties
+++ b/portal/src/main/resources/ApplicationResources_es.properties
@@ -1598,7 +1598,7 @@ indice.rastreo.gestion.graficas.categorias = Gr\u00E1ficas por Categor\u00EDa
 
 back.to.fulfilled.crawlers.list = Listado de rastreos realizados
 
-pdf.accessibility.title = INFORME DE ACCESIBILIDAD WEB DE 
+pdf.accessibility.title = INFORME DE\nACCESIBILIDAD WEB
 pdf.accessibility.subtitle = Centro de Referencia en Accesibilidad y Est\u00E1ndares Web
 pdf.accessibility.index.title = \u00CDNDICE
 pdf.accessibility.index.global.summary = RESUMEN GLOBAL
@@ -3077,7 +3077,7 @@ ob.resAnon.intav.report.1.p4 = La realizaci\u00F3n de un Observatorio de Accesib
 ob.resAnon.intav.report.1.p5 = El presente Estudio de Observatorio, realizado por el Ministerio de Pol\u00EDtica Territorial y Administraci\u00F3n P\u00FAblica en el marco de una encomienda de gesti\u00F3n con INTECO, analizar\u00E1 el estado en que se encuentran los sitios web de las Administraciones P\u00FAblicas de Espa\u00F1a en cuanto al cumplimiento de los requisitos de accesibilidad exigidos legalmente. El estudio se realizar\u00E1 sobre los portales pertenecientes a la Administraci\u00F3n General del Estado y una selecci\u00F3n de sitios web de las Comunidades Aut\u00F3nomas y Entidades Locales.
 
 	#Secci\u00F3n 1
-ob.resAnon.intav.report.11.p1 = El {0}, es una Sociedad Estatal adscrita al Ministerio de Industria, Turismo y Comercio a trav\u00E9s de la Secretar\u00EDa de Estado de Telecomunicaciones y para la Sociedad de la Informaci\u00F3n, cuyo objeto social es la gesti\u00F3n, asesoramiento, promoci\u00F3n y difusi\u00F3n de proyectos tecnol\u00F3gicos en el marco de la Sociedad de la Informaci\u00F3n. Asimismo INTECO gestiona el Centro de Referencia en Accesibilidad y Est\u00E1ndares Web.
+ob.resAnon.intav.report.11.p1 = La iniciativa del Observatorio de Accesibilidad Web se puso en marcha en el a\u00F1o 2010 prestando desde entonces diferentes servicios basados en el est\u00E1ndar UNE 139803:2004 (WCAG 1.0). Con la aprobaci\u00F3n del nuevo est\u00E1ndar 139803:2012 (WCAG 2.0) los servicios del observatorio se han actualizado para promover la aplicaci\u00F3n de este nuevo est\u00E1ndar.
 ob.resAnon.intav.report.11.p4 = La Direcci\u00F3n General para el Impulso de la Administraci\u00F3n Electr\u00F3nica, adscrita al {0} tiene entre sus funciones la promoci\u00F3n de la Administraci\u00F3n Electr\u00F3nica mediante la realizaci\u00F3n de estudios y programas de actuaci\u00F3n, la divulgaci\u00F3n de buenas pr\u00E1cticas, la cooperaci\u00F3n con otras Administraciones p\u00FAblicas y el desarrollo y difusi\u00F3n de las herramientas necesarias para ello. 
 ob.resAnon.intav.report.11.p4.bold = Ministerio de Pol\u00EDtica Territorial y Administraci\u00F3n P\u00FAblica
 ob.resAnon.intav.report.11.p5 = Asimismo le corresponde la evaluaci\u00F3n de las actuaciones realizadas y la elaboraci\u00F3n de las recomendaciones necesarias, todo ello en el marco de las directrices fijadas por el Consejo Superior de Administraci\u00F3n Electr\u00F3nica y por el Comit\u00E9 Sectorial de Administraci\u00F3n Electr\u00F3nica, a los que prestar\u00E1 apoyo t\u00E9cnico. 
@@ -4029,8 +4029,8 @@ chart.intav.bs.evolution.problem.rowTitle = N\u00FAmero de problemas
 chart.intav.bs.evolution.warning.rowTitle = N\u00FAmero de advertencias
 chart.intav.bs.evolution.cannottell.rowTitle = N\u00FAmero de observaciones
 
-priority1.bs = Incidencias Nivel de An\u00E1lisis 1
-priority2.bs = Incidencias Nivel de An\u00E1lisis 2
+priority1.bs = Incidencias Nivel de An\u00E1lisis I
+priority2.bs = Incidencias Nivel de An\u00E1lisis II
 first.level.bs = Prioridad 1
 second.level.bs = Prioridad 2
 first.level.incidents.bs = Incidencias de Prioridad 1
