Added ambit field to seeds
Former-commit-id: e69a23936df7add89cd193a601c59f047c3d1586

--- a/portal/src/main/resources/_ApplicationResources_backup_en.properties
+++ b/portal/src/main/resources/_ApplicationResources_backup_en.properties
@@ -1167,6 +1167,7 @@ nueva.semilla.webs.informacion = Information
 nueva.semilla.webs.introduccion.url = Entering URLs
 nueva.semilla.webs.lista.url = URL List
 nueva.semilla.webs.categoria = Category
+nueva.semilla.webs.ambito = Ambit
 nueva.semilla.webs.complejidad = Complexity
 
 borrar.semilla.busqueda.nombre = Name
