Added tag maintenance
Former-commit-id: 56720a7fe552531b2836d685856f28c522fd241d

--- a/portal/src/main/resources/_ApplicationResources_backup_en.properties
+++ b/portal/src/main/resources/_ApplicationResources_backup_en.properties
@@ -1169,6 +1169,11 @@ nueva.semilla.webs.lista.url = URL List
 nueva.semilla.webs.categoria = Category
 nueva.semilla.webs.ambito = Ambit
 nueva.semilla.webs.complejidad = Complexity
+nueva.semilla.webs.etiqueta           = Tag
+nueva.semilla.webs.clasificacion           = Classification
+nueva.semilla.webs.tematica           = Thematic
+nueva.semilla.webs.distribucion           = Distribution
+nueva.semilla.webs.recurrencia           = Recurrence
 
 borrar.semilla.busqueda.nombre = Name
 editar.semilla.busqueda.nombre = Name
