Tags working properly
Former-commit-id: 7d8f50bc70a4d9e90b876ecc6d9c14f096dffe57

--- a/portal/src/main/resources/_ApplicationResources_backup_en.properties
+++ b/portal/src/main/resources/_ApplicationResources_backup_en.properties
@@ -803,6 +803,7 @@ nueva.semilla.observatorio.categoria = Category
 nueva.semilla.observatorio.dependencia = Depends
 nueva.semilla.observatorio.acronimo = Acronym
 nueva.semilla.observatorio.in.directory = Follow only links from the same directory
+nueva.semilla.observatorio.etiqueta = Tags
 
 confirmacion.eliminar.semilla.pregunta = Are you sure you want to delete this seed?
 confirmacion.eliminar.semilla.info = The seed is associated with the following Observatories:
@@ -823,6 +824,7 @@ editar.semilla.observatorio.url = URL
 editar.semilla.observatorio.complejidad = Complexity
 editar.semilla.observatorio.acronimo = Acronym
 editar.semilla.observatorio.dependencia = Depends
+editar.semilla.observatorio.etiqueta = Tags
 editar.semilla.observatorio.in.directory = Follow only links from the same directory
 
 indice.cartuchos.gestion.cartuchos = Manage Plugins
