Seeds filter has all fields except tags. TODO: filter by tag and fix export methods to fit the filter
Former-commit-id: e82192e344cde2b1adb4fc5c7dee064187594ad3

--- a/portal/src/main/resources/_ApplicationResources_backup_en.properties
+++ b/portal/src/main/resources/_ApplicationResources_backup_en.properties
@@ -800,6 +800,7 @@ nueva.semilla.observatorio.nombre = Seed Name
 nueva.semilla.observatorio.url = URL
 nueva.semilla.observatorio.complejidad = Complexity
 nueva.semilla.observatorio.categoria = Category
+nueva.semilla.observatorio.directorio = Directory
 nueva.semilla.observatorio.dependencia = Depends
 nueva.semilla.observatorio.acronimo = Acronym
 nueva.semilla.observatorio.in.directory = Follow only links from the same directory
