XML importa validation as manual seed creation
Fix totla score avg


Former-commit-id: dafef1c7e4b66879b52ca8925145116a1a06867f

--- a/portal/src/main/resources/ApplicationResources_en_EN.properties
+++ b/portal/src/main/resources/ApplicationResources_en_EN.properties
@@ -258,6 +258,7 @@ caracteres.prohibidos = Illegal caractures cannot be used. Only alphanumeric, sp
 cargar.observatorio.vacio                    = Back
 cargar.rastreos.vacio                        = Back
 cargar.semilla.actualizables.title           = Updated
+cargar.semilla.errors.title                  = Errors
 cargar.semilla.inalterables.title            = Unchanged
 cargar.semilla.nuevas.title                  = New
 cargar.semilla.observatorio.acronimo         = Acronym
@@ -267,12 +268,14 @@ cargar.semilla.observatorio.clave            = Grouped by
 cargar.semilla.observatorio.complejidad      = Complexity
 cargar.semilla.observatorio.dependencia      = Dependency
 cargar.semilla.observatorio.directorio       = Directory
+cargar.semilla.observatorio.errores          = Errors
 cargar.semilla.observatorio.exportar.todo    = Export
 cargar.semilla.observatorio.importar.todo    = Import
 cargar.semilla.observatorio.nombre           = Name
 cargar.semilla.observatorio.nueva.semilla    = New Semilla
 cargar.semilla.observatorio.operaciones      = Operations
 cargar.semilla.observatorio.total            = <strong>{0}</strong> seeds total to be updated
+cargar.semilla.observatorio.total.errores    = Cannot load <strong>{0}</strong> seeds because of errors
 cargar.semilla.observatorio.total.nuevas     = A total <strong>{0}</strong> seeds will be created
 cargar.semilla.observatorio.total.sincambios = A total of <strong>{0}</strong> seeds will not be altered.
 cargar.semilla.observatorio.urls             = URLs
