--- a/portal/src/main/resources/ApplicationResources_es_CA.properties
+++ b/portal/src/main/resources/ApplicationResources_es_CA.properties
@@ -260,6 +260,7 @@ caracteres.prohibidos = No se pueden usar caract\u00E9res ilegales. S\u00F3lo al
 cargar.observatorio.vacio                    = Volver
 cargar.rastreos.vacio                        = Volver
 cargar.semilla.actualizables.title           = Actualizadas
+cargar.semilla.errors.title                  = Err\u00F3neas
 cargar.semilla.inalterables.title            = Inalteradas
 cargar.semilla.nuevas.title                  = Nuevas
 cargar.semilla.observatorio.acronimo         = Acr\u00F3nimo
@@ -270,6 +271,7 @@ cargar.semilla.observatorio.complejidad      = Complejidad
 cargar.semilla.observatorio.dependencia      = Dependencia
 cargar.semilla.observatorio.directorio       = Directorio
 cargar.semilla.observatorio.eliminada        = Eliminada
+cargar.semilla.observatorio.errores          = Errores
 cargar.semilla.observatorio.etiquetas        = Etiquetas
 cargar.semilla.observatorio.exportar.todo    = Exportar
 cargar.semilla.observatorio.importar.todo    = Importar
@@ -277,6 +279,7 @@ cargar.semilla.observatorio.nombre           = Nombre
 cargar.semilla.observatorio.nueva.semilla    = Nueva Semilla
 cargar.semilla.observatorio.operaciones      = Operaciones
 cargar.semilla.observatorio.total            = Se van a actualizar un total de <strong>{0}</strong> semillas
+cargar.semilla.observatorio.total.errores    = No se pueden cargar <strong>{0}</strong> semillas por tener errores
 cargar.semilla.observatorio.total.nuevas     = Se van a crear un total de <strong>{0}</strong> semillas
 cargar.semilla.observatorio.total.sincambios = No se van a alterar un total de <strong>{0}</strong> semillas
 cargar.semilla.observatorio.urls             = URLs
